syntax = "proto3";
package inmemorystore;
import "google/protobuf/any.proto";

message StoreRequest {
    string key = 1;
    string data = 2;
}

message StoreResponse {
    bool result = 1;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string data = 1;
}


service InMemoryStore{
    rpc Get(GetRequest) returns (GetResponse);
    rpc Store(StoreRequest) returns (StoreResponse);
}

